# arlee

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
crates/arlee-apiserver/: Cargo.toml
crates/arlee-apiserver/src/: api.rs  config.rs  error.rs  main.rs  scheduler.rs  state.rs
crates/arlee-cli/: Cargo.toml
crates/arlee-cli/src/: main.rs
crates/arlee-edge/: Cargo.toml
crates/arlee-edge/src/: api.rs  config.rs  docker_runner.rs  docker_substrate.rs  edge_cgroup.rs  error.rs  main.rs  substrate.rs  trajectory.rs
crates/arlee-models/: Cargo.toml
crates/arlee-models/src/: lib.rs
deploy/: README.md
deploy/terraform/gcp/: main.tf  outputs.tf  startup-script-apiserver.sh.tftpl  startup-script-edge.sh.tftpl  terraform.tfvars.example  variables.tf
docs/: dsec.md  memory-limits.md  v0-plan.md
docs/archive/: memory-limits.md  v0-plan.md
docs/design/: memory-limits.md
examples/: swebench_runner.py
python/: pyproject.toml
python/arlee/: __init__.py  client.py  models.py  sandbox.py
python/tests/: conftest.py
python/tests/integration/: test_memory_limits.py
