[project]
name = "arlee"
version = "0.1.0"
description = "Arlee Python SDK — async client for the Arlee Apiserver"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
readme = "../README.md"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arlee"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
